fix cards problem on IOS

--- a/css/field.css
+++ b/css/field.css
@@ -31,6 +31,7 @@
     background-repeat: no-repeat;
     border-radius: 20px;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     z-index: 1;
 
 }
